@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+August 10, 2003
+	fix JOYHAT_RIGHT input (thanks Latimerius)
+
 July 26, 2003
 	add GL_STEREO
 
